# Axiom

./: .clang-format  .gitattributes  .gitignore  Axiom_Architekturplan.docx  CMakeLists.txt  LICENSE  README.md  RendererDesign.md
.github/: copilot-instructions.md
assets/shaders/: renderer2D.frag.glsl  renderer2D.vert.glsl
assets/shaders/Renderer2D/: Circle.frag.glsl  Circle.vert.glsl  Quad.frag.glsl  Quad.glsl  Quad.vert.glsl  Quad_Simple.frag.glsl  Quad_Simple.vert.glsl
axiom/: CMakeLists.txt  CMakelists.txt
axiom/assets/shaders/Renderer2D/: Circle.glsl  Line.glsl  Quad.glsl  Skinned.glsl
axiom/include/axiom/: Axiom.h
axiom/include/axiom/ImGui/: IImGuiPanel.h  IImGuilayer.h  ImGuiPanelManager.h
axiom/include/axiom/ImGui/Panels/: LogPanel.h
axiom/include/axiom/Input/: ActionMap.h  GamepadCodes.h  Input.h  KeyCodes.h  MouseCodes.h
axiom/include/axiom/assetmanager/: Asset.h  AssetHandle.h  AssetType.h  TypedAsset.h
axiom/include/axiom/assets/: Asset.h  AssetID.h  AssetLoader.h  AssetManager.h  AssetMetaData.h  AssetRegistry.h  AssetType.h  TextureLoadInfo.h  VFS.h
axiom/include/axiom/core/: Application.h  Layer.h  Layerstack.h  LogSink.h  Logger.h  Time.h  UUID.h
axiom/include/axiom/core/Handle/: Handle.h  HandlePool.h
axiom/include/axiom/ecs/: Components.h  Entity.h  ISystem.h  Render2DSystem.h  Scene.h  SystemManager.h
axiom/include/axiom/events/: Event.h  EventBus.h  EventDispatcher.h  EventTypes.h  Events.h
axiom/include/axiom/input/: CustomInputDevice.h  InputContext.h  InputSystem.h  JoystickCodes.h
axiom/include/axiom/platform/: Window.h
axiom/include/axiom/platform/OpenGL/: OpenGLImGuiLayer.h  OpenGLIndexBuffer.h  OpenGLIndirectDrawBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture2D.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
axiom/include/axiom/platform/opengl/: OpenGLContext.h  OpenGLShader.h
axiom/include/axiom/profiling/: Profiler.h
axiom/include/axiom/renderer/: BindlessTextureHeap.h  Buffer.h  BufferLayout.h  Camera.h  DrawCommandBuffer.h  IndexBuffer.h  IndirectDrawBuffer.h  Material.h  MaterialSystem.h  Mesh.h  Model.h  RHICommon.h  RHIConcepts.h  RenderCommand.h  RenderDevice.h  RenderItem.h  RenderLayerRegistry.h  RenderState.h  Renderer.h  Renderer2D.h  RendererAPI.h  RendererRHI.h  RenderstateCache.h  Shader.h  ShaderDataType.h  ShaderPreprocessor.h  ShaderRegistry.h  ShaderSource.h  ShaderStage.h  SlangCompiler.h  Sprite.h  SubMesh.h  Texture.h  Texture2D.h  TextureEnums.h  TextureOptions.h  TextureSpec.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  (+1 more)
axiom/include/axiom/renderer/Core/: RendererAPI.h  RendererConfig.h
axiom/include/axiom/renderer/adapters/: SDL3Window.h
axiom/include/axiom/renderer/ecs/: GeometrySubmissionSystem.h  RenderComponents.h
axiom/include/axiom/renderer/graph/: render_graph.h
axiom/include/axiom/renderer/passes/: ClearScreenPass.h
axiom/include/axiom/renderer/rendergraph/: RenderContext.h  RenderGraph.h  RenderGraphBuilder.h  RenderGraphTypes.h  RenderPass.h  ResourceHandle.h
axiom/include/axiom/renderer/resources/: buffer.h  handles.h  pipeline.h  sampler.h  shader.h  texture.h  vertex_layout.h
axiom/include/axiom/renderer/rhi/: Backends.h  BindGroup.h  Commandlist.h  Handle.h  IRHIBackend.h  PipelineDesc.h  RHITypes.h  Sampler.h  ShaderDesc.h  VertexLayout.h  render_context.h  render_device.h
axiom/include/axiom/renderer/vulkan/: VulkanBackend.h  VulkanCommandlist.h  VulkanContext.h  VulkanDevice.h  VulkanFrame.h  VulkanPhysicalDevice.h  VulkanSwapchain.h  VulkanUtils.h
axiom/include/axiom/renderer/webgpu/: WebGPUBackend.h
axiom/include/axiom/serialization/: Serialization.h
axiom/src/: EntryPoint.cpp
axiom/src/ImGui/: IImGuiLayer.cpp  ImGuiPanelManager.cpp
axiom/src/Input/: ActionMap.cpp  Input.cpp
axiom/src/assetmanager/: AssetTypes.cpp
axiom/src/assets/: VFS.cpp
axiom/src/core/: Application.cpp  Layerstack.cpp  Logger.cpp  Time.cpp  UUID.cpp
axiom/src/ecs/: Render2DSystem.cpp  Scene.cpp
axiom/src/events/: EventBus.cpp
axiom/src/input/: InputSystem.cpp
axiom/src/platform/: Window.cpp
axiom/src/platform/OpenGL/: OpenGLImGuiLayer.cpp  OpenGLIndexBuffer.cpp  OpenGLIndirectDrawBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture2D.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
axiom/src/platform/opengl/: OpenGLContext.cpp  OpenGLShader.cpp
axiom/src/profiling/: Profiler.cpp
axiom/src/renderer/: BindlessTextureHeap.cpp  Buffer.cpp  Camera.cpp  DrawCommandBuffer.cpp  IndexBuffer.cpp  IndirectDrawBuffer.cpp  Material.cpp  MaterialSystem.cpp  Mesh.cpp  RenderCommand.cpp  RenderLayerRegistry.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  ShaderPreprocessor.cpp  ShaderRegistry.cpp  SlangCompiler.cpp  Texture.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
axiom/src/renderer/Backends/Vulkan/: VulkanCommandBuffer.cpp  VulkanDevice.cpp
axiom/src/renderer/rendergraph/: RenderGraph.cpp
axiom/src/renderer/rhi/: Backends.cpp
axiom/src/renderer/vulkan/: VulkanBackend.cpp  VulkanCommandlist.cpp  VulkanContext.cpp  VulkanSwapchain.cpp
axiom/src/renderer/webgpu/: WebGPUBackend.cpp
build-vs-codex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Axiom.slnx  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-vs-codex/axiom/: INSTALL.vcxproj  INSTALL.vcxproj.filters  axiom_engine.vcxproj  axiom_engine.vcxproj.filters  cmake_install.cmake
build-vs-codex/testbed/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  testbed.vcxproj  testbed.vcxproj.filters
build-vs-codex/tools/packtool/: AxiomPackTool.vcxproj  (+4 more)
testbed/: CMakeLists.txt  main.cpp
testbed/assets/shaders/: SkinnedColor.glsl  Textured.glsl  VertexFormat.glsl
testbed/include/Panels/: InspectorPanel.h  SceneHierarchyPanel.h
testbed/scene/: TestScene.h
testbed/src/: main.cpp
testbed/src/Panels/: InspectorPanel.cpp  SceneHierarchyPanel.cpp
tools/: bake_shaders.py  shader_cook.py
tools/packtool/: CMakeLists.txt  PackTool.cpp
(+48 files in other folders)
